# devspace

./: Cargo.toml  LICENSE_MIT  README.md  build.rs  devspace
src/: cmds.rs  config.rs  database.rs  lib.rs  main.rs  repl.rs  utils.rs
src/cmds/: edit.rs  go.rs  init.rs  list_spaces.rs  list_trees.rs  new_tree.rs  remove.rs  remove_tree.rs  wdir.rs
