[package]
name = "devspace"
version = "0.1.0-dev"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
shadow-rs = { version = "1.0.1", default-features = false }
shlex = "1.3.0"
thiserror = "2.0.12"
tmux_interface = "0.3.2"

[build-dependencies]
shadow-rs = "1.0.1"
