[package]
name = "devspace"
version = "0.1.0"
description = "devspace helps you to quickly start all the programs you need to dev using Tmux and other tools."
repository = "https://github.com/thi8v/devspace"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["devspace", "tmux"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
shadow-rs = { version = "1.0.1", default-features = false }
shlex = "1.3.0"
thiserror = "2.0.12"
tmux_interface = "0.3.2"

[build-dependencies]
shadow-rs = "1.0.1"
